Shap visualization on front
